# src/swagger.yml
@@ -7,7 +7,7 @@ servers:
 paths:
   /api/v1/book:
     patch:
-      summary: Add a books
+      summary: Add a book
       parameters:
         - in: body
           name: book
@@ -24,6 +24,12 @@ paths:
                 type: string
                 format: date
               description:
+                type: string
+              quantity:
+                type: Number
+              publisher:
+                type: string
+              isbn:
                 type: string
       responses:
         200:
@@ -59,6 +65,12 @@ paths:
                 type: string
                 format: date
               description:
+                type: string
+              quantity:
+                type: Number
+              publisher:
+                type: string
+              isbn:
                 type: string
       responses:
         200:
@@ -109,14 +121,14 @@ paths:
         description: This Endpoint takes user email and password to login
 
   /api/v1/auth/logout:
-    patch:
+    get:
       summary: Logout
       responses:
         200:
         description: This Endpoint for logout by removing cookies.
 
   /api/v1/auth/user-details:
-    patch:
+    get:
       summary: Get details of logged in user
       responses:
         200:
